--- a/assets/css/tournamentManagement.css
+++ b/assets/css/tournamentManagement.css
@@ -1,3 +1,4 @@
+/* GENERAL */
 *,
 ::before,
 ::after {
@@ -7,10 +8,212 @@
   font-family: "Roboto Condensed", sans-serif;
   font-optical-sizing: auto;
   color: #f2f2f2;
-  text-shadow: 0 0 10px rgb(0, 0, 0);}
+  text-shadow: 0 0 10px rgb(0, 0, 0);
+}
 body {
   background-color: #151b27;
-  min-height: 100vh;
+  width: 100%;
+}
+main {
+  width: 100%;
+
   display: flex;
   flex-wrap: wrap;
+  justify-content: flex-end;
+}
+h1 {
+  width: 100%;
+  margin: 0 auto;
+  padding: 5rem 0 0 2rem;
+  font-size: 2rem;
+}
+/* TOGGLE MENU DEROULANT  */
+.active-sheet-tournament {
+  display: none;
+}
+
+.main-container-tournament-management {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+/* CONTAINER INFO GENERAL */
+.info-general-tournament-management {
+  width: 80%;
+  margin-top: 2rem;
+  background-color: #232f65;
+  border: 1px solid black;
+  box-shadow: 0 0 15px rgb(0, 0, 0, 55%);
+}
+
+/* titre et image information générale */
+.title-sheet-tournament {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #28303f;
+  width: 100%;
+  height: 40px;
+  border-bottom: 1px solid black;
+  font-weight: 500;
+  padding: 0 10px 0 10px;
+}
+.title-sheet-tournament h2 {
+  font-size: 18px;
+}
+.card-tournament-management img {
+  width: 100%;
+}
+/* box information générale */
+
+.info-card {
+  width: 90%;
+  margin: auto;
+}
+h3 {
+  font-size: 1rem;
+  margin: 12px 0;
+}
+h4 {
+  margin: 15px 0 30px;
+  font-size: 1.3rem;
+}
+/* divider vertical de la box info general  */
+.container-divider-card {
+  display: flex;
+  margin-bottom: 20px;
+}
+.container-left {
+  width: 50%;
+  padding-right: 1rem;
+  border-right: solid 1px #fff;
+}
+.container-right {
+  width: 50%;
+  padding-left: 2rem;
+  border-left: solid 1px #fff;
+}
+#sub-players {
+  margin-right: 10px;
+  font-weight: bolder;
+  color: rgb(19, 113, 61);
+}
+#total-players {
+  margin-left: 10px;
+}
+/* DIVIDER  horizontal BOX INFO GENERALE */
+.divider-sheet-tournament-first {
+  width: 90%;
+  height: 2px;
+  background-color: #fff;
+  margin: 50px auto 50px;
+}
+.divider-sheet-tournament {
+  width: 75%;
+  height: 2px;
+  background-color: #fff;
+  margin: 50px auto;
+}
+.container-info .divider-sheet-tournament:nth-child(1) {
+  margin-top: 50px auto;
+}
+/* BOX DES DESCRIPTION REGLES ET PRIX   */
+.description-tournament {
+  width: 90%;
+  margin: auto;
+}
+.description-tournament p {
+  width: 90%;
+  margin: auto;
+  background-color: rgb(255, 255, 255, 0.15);
+  padding: 10px 15px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+}
+
+/* BUTTON MODIFIER */
+.container-cta {
+  display: flex;
+  justify-content: center;
+  width: 50%;
+  margin: 40px auto 20px;
+}
+.cta {
+  font-size: 1rem;
+  width: 150px;
+  height: 30px;
+  border-radius: 25px;
+  color: rgb(158, 219, 52);
+  background-color: #001c61;
+  box-shadow: 0 0 10px rgb(158, 219, 52, 0.8);
+  transition: all 0.3s ease, box-shadow 0.3s ease;
+  border: none;
+}
+.cta a {
+  text-decoration: none;
+}
+
+.cta:active {
+  transform: translateY(1px);
+  box-shadow: 0 0 10px 2px rgb(158, 219, 52);
+}
+
+@media (min-width: 768px) {
+  h1 {
+    width: 90%;
+    padding: 2rem 0 0 2rem;
+  }
+  .main-container-tournament-management {
+    width: 80%;
+  }
+  /* CONTAINER INFO GENERAL */
+  .info-general-tournament-management {
+    width: 90%;
+  }
+}
+
+@media (min-width: 1024px) {
+
+}
+@media (min-width: 1300px) {
+  h1 {
+    font-size: 2rem;
+  }
+  .main-container-tournament-management {
+    width: 85%;
+  }
+
+  /* SEPARATION DE LA BOX LEFT ET RIGHT DE LA SECTION INFORMATION GENERALE  */
+  .container-info-description {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 3rem 0 0;
+  }
+  .card-tournament-management {
+    width: 40%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+  }
+  .description-tournament {
+    width: 40%;
+    margin: 0;
+  }
+
+  /* hide divider */
+  .divider-sheet-tournament-first {
+    display: none;
+  }
+  .divider-sheet-tournament {
+    display: none;
+  }
+
+}
+@media (min-width: 1595px) {
+  h1 {
+    font-size: 3rem;
+  }
+  .info-general-tournament-management {
+    width: 70% ;
+  }
 }
