--- a/assets/css/tournamentSheet.css
+++ b/assets/css/tournamentSheet.css
@@ -60,7 +60,6 @@ h1{
   background-color: #28303F;
   width: 100%;
   height: 40px;
-  background-color: #28303F;
   border-bottom: 1px solid black;
   font-weight: 500;
   padding: 0 10px 0 10px;
@@ -69,12 +68,12 @@ h1{
 .title-sheet-tournament h2{
   font-size: 18px;
 }
-
-/* box information générale */
-
 .card-tournament-sheet img{
   width: 100%;
 }
+
+/* box information générale */
+
 .info-card{
   width: 90%;
   margin: auto;
@@ -139,8 +138,8 @@ h4{
   margin: auto;
   background-color: rgb(255, 255, 255, 0.15);
   padding: 10px 15px;
+  box-shadow:  0 0 10px rgba(0, 0, 0, 0.8);
 }
-
 
 
 
