--- a/assets/css/SignUp.css
+++ b/assets/css/SignUp.css
@@ -7,12 +7,11 @@
   padding: 0;
   font-family: "Roboto Condensed", sans-serif;
   font-optical-sizing: auto;
-  color: #f2f2f2;
+  /* color: #f2f2f2; */
   text-shadow: 0 0 10px rgb(0, 0, 0);}
 body {
   height: 110vh;
   width: 100%;
-  color: #f2f2f2;
   background-image: url("../img/General/rue-sombre-asphalte-mouille-reflets-rayons-dans-eau_129911-2318.webp");
   background-size: cover;
   background-position: center;
@@ -20,13 +19,24 @@ body {
   display: flex;
   justify-content: center;
 }
+/* MESSAGE D ERREUR VERIFICATION REGEX */
+.message-error{
+  display: none;
+  font-size: 12px;
+  color: red;
 
+}
+.message-error-visible{
+  display: block;
+}
+
+/* CONTAINER SIGNUP */
 .containerSignUp {
   width: 90%;
   max-width: 350px;
-  height: 580px;
+  height: 640px;
   margin: 6rem 1rem;
-
+  color: #f2f2f2;
   background-color: #28303f;
   box-shadow: 0 0 15px 0px rgba(158, 219, 52);
   border-radius: 15px;
