--- a/assets/css/SignUp2of2.css
+++ b/assets/css/SignUp2of2.css
@@ -21,11 +21,22 @@ body {
   display: flex;
   justify-content: center;
 }
+/* MESSAGE D ERREUR VERIFICATION REGEX */
+.message-error{
+  display: none;
+  font-size: 12px;
+  color: red;
 
+}
+.message-error-visible{
+  display: block;
+}
+
+/* CONTAINER SIGNUP */
 .containerSignUp {
   width: 90%;
   max-width: 350px;
-  height: 580px;
+  height: 640px;
   margin: 6rem 1rem;
 
   background-color: #28303f;
