--- a/assets/css/profilPrivate.css
+++ b/assets/css/profilPrivate.css
@@ -99,6 +99,12 @@ footer{
 option{
   color: black;
 }
+form{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 .container-info-profil{
     width: 100%;
     height: auto;    
