--- a/assets/css/tournamentManagement.css
+++ b/assets/css/tournamentManagement.css
@@ -348,11 +348,24 @@ input {
   width: 20px;
   height: 20px;
 }
- /* style de la fenetre edit */
+ /*fenetre edit et button add */
  .edit-nickname{
   width: 50%;
   height: 24px;
-  margin-right: 10%;
+  margin-right: 5%;
+}
+.save-btn{
+  font-size: 1rem;
+  width: 30%;
+  max-width: 60px;
+  height: 20px;
+  border-radius: 20px;
+  color: #f2f2f2;
+  background-color: #001c61;
+  box-shadow: 0 0 10px rgb(158, 219, 52, 0.6);
+  transition: all 0.3s ease, box-shadow 0.3s ease;
+  border: none;
+  margin-right: 10px;
 }
 /* BOX REGISTRATION */
 .registration {
