--- a/assets/css/SignUp.css
+++ b/assets/css/SignUp.css
@@ -93,8 +93,10 @@ form {
   border: none;
 }
 
-.containerButton button a {
-  text-decoration: none;
+a {
+  display: inline-block;
+  width: 100%;
+  text-decoration: none
 }
 .containerButton button a:visited {
   color: rgb(158, 219, 52);
