--- a/assets/css/tournamentManagement.css
+++ b/assets/css/tournamentManagement.css
@@ -193,7 +193,7 @@ h4 {
 .cta {
   font-size: 1rem;
   width: 150px;
-  height: 30px;
+  height: 40px;
   border-radius: 25px;
   color: rgb(158, 219, 52);
   background-color: #001c61;
@@ -202,12 +202,15 @@ h4 {
   border: none;
 }
 .cta a {
+  display: inline-block;
   width: 100%;
+  height: 40px;
+  line-height: 40px;
   text-decoration: none;
   color: #f2f2f2;
 }
 .cta:active {
-  transform: translateY(1px);
+  transform: translateY(3px);
   box-shadow: 0 0 10px 2px rgb(158, 219, 52);
   
 }
@@ -294,7 +297,7 @@ span {
   text-decoration: none;
 }
 .add:active {
-  transform: translateY(1px);
+  transform: translateY(3px);
   box-shadow: 0 0 10px 2px rgb(158, 219, 52);
 }
 .add:hover{
@@ -476,6 +479,60 @@ input {
 }
 
 
+/* BUTTON SUBMIT  */
+.main-container-button-submit{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 30px 0 50px;
+  
+}
+.container-button-submit{
+  width: 100%;
+  margin-bottom: 40px;
+  text-align: center;
+}
+
+.submit {
+  font-size: 1rem;
+  width: 200px;
+  height: 60px;
+  border-radius: 25px;
+  color: #f2f2f2;
+  background-color: #001c61;
+  box-shadow: 0 0 10px rgb(158, 219, 52, 0.6);
+  transition: all 0.3s ease, box-shadow 0.3s ease;
+  border: none;
+}
+.submit a {
+  display: inline-block;
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+  text-decoration: none;
+  color: #f2f2f2;
+}
+.submit:active {
+  transform: translateY(3px);
+  box-shadow: 0 0 10px 2px rgb(158, 219, 52);
+  
+}
+.submit:hover{
+  box-shadow: 0 0 10px rgb(158, 219, 52, 1);
+}
+
+/* TREE TOURNAMENT MANAGEMENT */
+.main-container-tournament-tree-management{
+  width: 100%;  
+  display: flex;
+  justify-content: center;
+  
+}
+.container-tournament-tree-management{
+  width: 90%;
+  max-width: 1024px;
+}
 @media (min-width: 768px) {
   h1 {
     width: 90%;
@@ -484,7 +541,7 @@ input {
   .main-container-tournament-management {
     width: 80%;
   }
-
+  
   /* CONTAINER INFO GENERAL */
   .info-general-tournament-management {
     width: 90%;
@@ -494,6 +551,23 @@ input {
   .tournament-management {
     width: 90%;
   }
+  /* BUTTON SUBMIT  */
+.main-container-button-submit{
+  width: 80%;
+  
+}
+.container-button-submit{
+  width: 30%;
+}
+
+/* TREE TOURNAMENT MANAGEMENT */
+.main-container-tournament-tree-management{
+  width: 80%;
+  
+}
+.container-tournament-tree-management{
+  width: 90%;
+}
 }
 
 @media (min-width: 1024px) {
@@ -540,6 +614,22 @@ input {
   .main-container-tournament-management {
     width: 85%;
   }
+    /* BUTTON SUBMIT  */
+.main-container-button-submit{
+  width: 85%;
+  
+}
+
+
+/* TREE TOURNAMENT MANAGEMENT */
+.main-container-tournament-tree-management{
+  width: 85%;
+  
+  
+}
+.container-tournament-tree-management{
+  width: 90%;
+}
 
 }
 @media (min-width: 1595px) {
