--- a/assets/css/tournamentTree.css
+++ b/assets/css/tournamentTree.css
@@ -80,12 +80,14 @@
 
 .cell-team {
   width: 80%;
+  font-size: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .cell-result {
   width: 20%;
+  font-size: 1.4rem;
   display: flex;
   justify-content: center;
   align-items: center;
