--- a/assets/css/profilPrivate.css
+++ b/assets/css/profilPrivate.css
@@ -172,14 +172,18 @@ input, select{
   border-radius: 25px;
   color: rgb(158, 219, 52);
   background-color: #001c61;
-  box-shadow: 0 0 20px rgb(158, 219, 52);
+  box-shadow: 0 0 20px rgb(158, 219, 52,0.5);
   transition: all 0.3s ease, box-shadow 0.3s ease;
   border: none;
+  cursor: pointer;
 }
 
 .button-update:active {
-  transform: translateY(1px);
+  transform: translateY(3px);
   box-shadow: 0 0 10px 2px rgb(158, 219, 52);
+}
+.button-update:hover{
+  box-shadow: 0 0 20px rgb(158, 219, 52);
 }
 
 /* MESSAGE D ERREUR VERIFICATION REGEX */
@@ -207,7 +211,7 @@ input, select{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  
+  margin-top: 50px;
   width: 100%;
 }
 .container-card{
@@ -217,58 +221,6 @@ input, select{
   justify-content: center;
   background-color: #232F65;
 }
-/* CARD TOURNAMENT */
-
-.card-tournament {
-  width: 325px;
-  height: 425px;
-  max-width: 100%;
-  margin: 2rem 0.5rem;
-  background-color: #232f65;
-  border-radius: 10px;
-  box-shadow: 0 5px 25px 2px rgb(0, 0, 0, 85%);
-  text-shadow: 1px 1px 5px rgb(14, 3, 3);
-}
-.card-tournament a {
-  display: flex;
-  flex-wrap: wrap;
-  align-content: flex-start;
-  width: 100%;
-  height: 100%;
-  text-decoration: none;
-}
-.card-tournament:hover {
-  cursor: pointer;
-  box-shadow: 0 0 20px 1px rgb(158, 219, 52, 0.1);
-  transition: all 0.3s ease;
-  transform: translateY(2px);
-}
-.banner-card-tournament {
-  width: 100%;
-  height: 30%;
-  background-image: url("../img/General/MiniBannière-lol323x100.webp");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  border-radius: 10px;
-}
-
-.card-tournament h4 {
-  width: 90%;
-  font-size: 1.2rem;
-  margin: 15px 5px;
-}
-.card-tournament h5 {
-  margin-left: 10px;
-  font-weight: 400;
-  font-size: 1rem;
-}
-.card-tournament h6 {
-  margin-left: 10px;
-  font-weight: 500;
-
-  font-size: 1.2rem;
-}
 .box-dropdown{
   width: 100%;
   display: flex;
@@ -277,34 +229,10 @@ input, select{
 
 }
 .box-history-profil{
-  box-shadow: 0 0 15px rgb(0, 0, 0, 55%);  
+  box-shadow: 0 0 15px rgb(0, 0, 0, 55%);
+  padding-bottom: 50px;  
 }
-.info-date-tournament {
-  width: 90%;
-  margin: 40px auto 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.info-date-tournament p {
-  font-size: 0.8rem;
-  margin: 0 6px;
-  text-align: center;
-}
-.info-date-tournament p:last-child {
-  min-width: 25%;
-  height: 24px;
-  background-color: #DD0606;
-  font-size: 11px;
-  padding-top: 6px;
-  border-radius: 15px;
-}
-.divider-card {
-  width: 100%;
-  height: 1px;
-  margin: 20px 0;
-  background-color: rgb(0, 0, 0, 50%);
-}
+
 
 @media (min-width: 768px) {
   .banner-photo-profil{
@@ -378,53 +306,6 @@ input, select{
 }
 @media (min-width: 1595px) {
 
-  /* CARD TOURNAMENT */
-  .card-tournament {
-    width: 350px;
-    height: 500px;
-    margin: 25px 20px;
-    text-shadow: 1px 1px 5px rgb(14, 3, 3);
-  }
-
-  .card-tournament h4 {
-    font-size: 21px;
-    margin: 30px 15px;
-  }
-  .card-tournament h5 {
-    margin-left: 20px;
-    font-size: 16px;
-  }
-  .card-tournament h6 {
-    margin-left: 20px;
-    font-weight: 500;
-
-    font-size: 22px;
-  }
-  .info-date-tournament {
-    width: 90%;
-    margin: 20px auto 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .info-date-tournament p {
-    font-size: 18px;
-    margin: 0 6px;
-  }
-  .info-date-tournament p:last-child {
-    min-width: 25%;
-    height: 35px;
-    font-size: 16px;
-    padding-top: 8px;
-    border-radius: 15px;
-  }
-  .container-history{
-    width: 85%;
-    
-  }
-  .container-info-profil{
-    width: 85%;
-  }
 }
 
 /* 
