--- a/assets/css/tournamentManagement.css
+++ b/assets/css/tournamentManagement.css
@@ -314,8 +314,9 @@ span {
 }
 .table-players tr {
   width: 100%;
-  height: 40px;
+  height: 50px;
 }
+
 
 input {
   width: 20px;
@@ -519,7 +520,7 @@ input {
   
 }
 .submit:hover{
-  box-shadow: 0 0 10px rgb(158, 219, 52, 1);
+  box-shadow: 0 0 15px rgb(158, 219, 52, 1);
 }
 
 /* TREE TOURNAMENT MANAGEMENT */
@@ -532,6 +533,12 @@ input {
 .container-tournament-tree-management{
   width: 90%;
   max-width: 1024px;
+}
+.cell-tournament{
+  cursor: pointer;
+}
+.cell-tournament:hover{
+  box-shadow: inset 0 0 10px rgb(158, 219, 52, 0.4);
 }
 @media (min-width: 768px) {
   h1 {
