--- a/assets/css/tournamentManagement.css
+++ b/assets/css/tournamentManagement.css
@@ -386,11 +386,11 @@ input {
   align-items: end;
   justify-content: center;
   width: 49%;
-  margin: 0 0.5%;
+  margin: 0.5% 0.5%;
   max-width: 400px;
   aspect-ratio: 1.5;
   border: 1px solid black;
-  box-shadow: 0 0 15px rgb(0, 0, 0, 45%);
+  box-shadow: 0 0 15px rgb(0, 0, 0, 0.3);
   padding-bottom: 10px;
 }
 .top-box-registration {
